@@ -19,6 +19,7 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 @Component
@@ -36,64 +37,74 @@ public class JwtFilter extends OncePerRequestFilter {
     @Autowired
     private AdminUserRepository adminUserRepository;
 
-
     @Override
     protected void doFilterInternal(HttpServletRequest request,
                                     HttpServletResponse response,
                                     FilterChain chain)
             throws ServletException, IOException {
+
         String authHeader = request.getHeader("Authorization");
+
         if (authHeader != null && authHeader.startsWith("Bearer ")) {
             String token = authHeader.substring(7);
             String email = jwtUtil.extractEmail(token);
+
             if (email != null && SecurityContextHolder.getContext().getAuthentication() == null) {
 
-                // UserAdmin
+                // 🛡️ AdminUser
                 Optional<AdminUser> adminOpt = adminUserRepository.findByEmail(email);
                 if (adminOpt.isPresent() && jwtUtil.validateToken(token)) {
                     AdminUser admin = adminOpt.get();
-                    var auth = new UsernamePasswordAuthenticationToken(
-                            admin,
-                            null,
-                            Collections.singletonList(
-                                    new SimpleGrantedAuthority("ROLE_" + admin.getRole().name())
-                            )
+
+                    List<SimpleGrantedAuthority> authorities = List.of(
+                            new SimpleGrantedAuthority("ROLE_ADMIN")
                     );
+
+                    var auth = new UsernamePasswordAuthenticationToken(admin, null, authorities);
                     SecurityContextHolder.getContext().setAuthentication(auth);
+
+                    System.out.println("✅ Authenticated as: " + email + " with role: ADMIN");
                     chain.doFilter(request, response);
                     return;
                 }
 
-
-                // Employee tried first
+                // 🧑‍💼 UserEmployee
                 Optional<UserEmployee> empOpt = employeeRepository.findByEmail(email);
                 if (empOpt.isPresent() && jwtUtil.validateToken(token)) {
                     UserEmployee emp = empOpt.get();
+
                     var auth = new UsernamePasswordAuthenticationToken(
                             emp,
                             null,
-                            Collections.singletonList(
-                                    new SimpleGrantedAuthority("ROLE_" + emp.getRole().name())
-                            )
+                            List.of(new SimpleGrantedAuthority("ROLE_" + emp.getRole().name()))
                     );
+
                     SecurityContextHolder.getContext().setAuthentication(auth);
-                } else {
-                    //Try the client
-                    Optional<UserClient> cliOpt = clientRepository.findByEmail(email);
-                    if (cliOpt.isPresent() && jwtUtil.validateToken(token)) {
-                        UserClient cli = cliOpt.get();
-                        var auth = new UsernamePasswordAuthenticationToken(
-                                cli,
-                                null,
-                                Collections.singletonList(
-                                        new SimpleGrantedAuthority("ROLE_" + cli.getRole().name())
-                                )
-                        );
-                        SecurityContextHolder.getContext().setAuthentication(auth);
-                    }
+                    System.out.println("✅ Authenticated as: " + email + " with role: " + emp.getRole());
+                    chain.doFilter(request, response);
+                    return;
+                }
+
+                // 👤 UserClient
+                Optional<UserClient> cliOpt = clientRepository.findByEmail(email);
+                if (cliOpt.isPresent() && jwtUtil.validateToken(token)) {
+                    UserClient cli = cliOpt.get();
+
+                    var auth = new UsernamePasswordAuthenticationToken(
+                            cli,
+                            null,
+                            List.of(new SimpleGrantedAuthority("ROLE_" + cli.getRole().name()))
+                    );
+
+                    SecurityContextHolder.getContext().setAuthentication(auth);
+                    System.out.println("✅ Authenticated as: " + email + " with role: " + cli.getRole());
+                    chain.doFilter(request, response);
+                    return;
                 }
             }
         }
+
+        // ⛔ لم يتم التوثيق
         chain.doFilter(request, response);
     }
 }
